testsuite/tests/backpack/should_compile/bkp16.bkp
{-# LANGUAGE MagicHash #-}
unit p where
    dependency ghc-prim
    signature Int where
        import GHC.Exts
        data Int = I# Int#
unit q where
    dependency p[Int=base:GHC.Exts]
